# bq-validator

./: .pre-commit-config.yaml  .pypirc  Dockerfile  MANIFEST.in  Makefile  README.md  action.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml  test-publish.yml  test.yml
bq_validator/: __init__.py  bigquery.py  cli.py  utils.py
dev/: clean.sh  format_python.sh  lint_python.sh  publish.sh  setup.sh  test_entry_point.sh
requirements/: requirements-dev.txt  requirements.txt
tests/: test_utils.py
