[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "bq_validator"
authors = [{ name = "yu-iskw" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 4 - Beta',
    "License :: OSI Approved :: Apache Software License",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
dynamic = ["version", "description"]


[console_scripts]
bq-validator = 'bq_valiadtor.cli:main'
